# internal/pkg/utils/RouterURL.go
@@ -7,6 +7,7 @@ const (
 	ProfileURLPattern         = "/api/profile/"
 	ScheduleURLPattern        = "/api/schedule/"
 	TicketScheduleURLPattern  = "/api/ticket/schedule/"
+	ReplyURLPattern			  = "/api/reply/"
 	HallURLPattern            = "/api/hall/"
 	TicketURLPattern          = "/api/ticket/"
 	RecommendationsURLPattern = "/api/recommendations/"
